tests/bad/func_invalid_return.ae
/// fail: Invalid return type

def foo(x: i32): Foo { }